unpackaged/main/default/objects/Opportunity/fields/Fund_Closing_TImeframe__c.field-meta.xml
<CustomField>
    <fullName>Fund_Closing_TImeframe__c</fullName>
    <label>Fund Closing TImeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round #1</fullName>
            </value>
            <value>
                <fullName>Round #2</fullName>
            </value>
            <value>
                <fullName>Round #3</fullName>
            </value>
            <value>
                <fullName>Sometime - Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>