unpackaged/main/default/objects/Opportunity/fields/Get_1K_referral__c.field-meta.xml
<CustomField>
    <fullName>Get_1K_referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the lead is captured from 1k referral campaign</description>
    <label>Get 1K referral</label>
    <type>Checkbox</type>
</CustomField>