unpackaged/main/default/objects/Opportunity/fields/Ground_Mount_Install_Watt__c.field-meta.xml
<CustomField>
    <fullName>Ground_Mount_Install_Watt__c</fullName>
    <formula>CASE( Roof_Type__c , "Ground Mount", IF(System_Size_Calculated_kW__c &gt; 10, 0.48, 0.60), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ground Mount Install $/Watt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>