unpackaged/main/default/objects/Opportunity/fields/HIC_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>HIC_Incentive_Amount__c</fullName>
    <label>HIC Incentive Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>