unpackaged/main/default/objects/Opportunity/fields/High_Roof_Adder_Contracted_Sales__c.field-meta.xml
<CustomField>
    <fullName>High_Roof_Adder_Contracted_Sales__c</fullName>
    <formula>IF(   Number_of_Stories__c   &gt; 2, 50*  System_Size_Calculated_kW__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Roof Adder (Contracted Sales)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>