unpackaged/main/default/objects/Opportunity/fields/HOA_Appeal__c.field-meta.xml
<CustomField>
    <fullName>HOA_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Denial</label>
    <type>Checkbox</type>
</CustomField>