unpackaged/main/default/objects/Opportunity/fields/HOA_Application_Fee_Approved_For_Pmt__c.field-meta.xml
<CustomField>
    <fullName>HOA_Application_Fee_Approved_For_Pmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Application Fee Approved For Pmt</label>
    <type>Checkbox</type>
</CustomField>