unpackaged/main/default/objects/Opportunity/fields/HOA_Application_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>HOA_Application_Fee_Paid__c</fullName>
    <label>HOA Application Submittal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>