unpackaged/main/default/objects/Opportunity/fields/HOA_Application_Sent__c.field-meta.xml
<CustomField>
    <fullName>HOA_Application_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner Signature Required</label>
    <type>Checkbox</type>
</CustomField>