unpackaged/main/default/objects/Opportunity/fields/HOA_Application_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Application_Sent_Date__c</fullName>
    <label>HOA  ApplicationSent for Submittal</label>
    <type>Date</type>
</CustomField>