unpackaged/main/default/objects/Opportunity/fields/HOA_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approval_Date__c</fullName>
    <label>HOA Approval Date</label>
    <type>Date</type>
</CustomField>