unpackaged/main/default/objects/Opportunity/fields/HOA_Approval_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approval_Not_Required__c</fullName>
    <label>HOA Approval Not Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Required for AHJ Permit</fullName>
            </value>
            <value>
                <fullName>HO Bypass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>