unpackaged/main/default/objects/Opportunity/fields/HOA_Approved__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Approval Required for Permit</label>
    <type>Checkbox</type>
</CustomField>