unpackaged/main/default/objects/Opportunity/fields/HOA_Indemnification_Clause_Signed__c.field-meta.xml
<CustomField>
    <fullName>HOA_Indemnification_Clause_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HOA Indemnification Clause Signed</description>
    <label>HOA Appeal Submitted</label>
    <type>Checkbox</type>
</CustomField>