unpackaged/main/default/objects/Opportunity/fields/HOA_Neighborhood_Subdivision_Name__c.field-meta.xml
<CustomField>
    <fullName>HOA_Neighborhood_Subdivision_Name__c</fullName>
    <label>HOA Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>