unpackaged/main/default/objects/Opportunity/fields/HOA_Notes__c.field-meta.xml
<CustomField>
    <fullName>HOA_Notes__c</fullName>
    <label>HOA Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>