unpackaged/main/default/objects/Opportunity/fields/HOA_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>HOA_Processing_Time__c</fullName>
    <formula>Case(Home_Owners_Association__c,"No", 0,"Yes", 

IF( ISBLANK(HOA_Approval_Date__c) = True, Today() -  Customer_Sent_HOA_Application_Date__c , HOA_Approval_Date__c - Customer_Sent_HOA_Application_Date__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>