unpackaged/main/default/objects/Opportunity/fields/HOA_Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>HOA_Signature_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Application on File</label>
    <type>Checkbox</type>
</CustomField>