unpackaged/main/default/objects/Opportunity/fields/Homeowner_Install_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Install_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner Install Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>