unpackaged/main/default/objects/Opportunity/fields/Homeowners_Insurance_Docs_Attached__c.field-meta.xml
<CustomField>
    <fullName>Homeowners_Insurance_Docs_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Owners Insurance Docs Attached</label>
    <type>Checkbox</type>
</CustomField>