unpackaged/main/default/objects/Opportunity/fields/IC_Approved__c.field-meta.xml
<CustomField>
    <fullName>IC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Completion (M1) Approved</label>
    <type>Checkbox</type>
</CustomField>