unpackaged/main/default/objects/Opportunity/fields/IC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>IC_Approved_Date__c</fullName>
    <label>Install Completion (M1) Approved Date</label>
    <type>Date</type>
</CustomField>