unpackaged/main/default/objects/Opportunity/fields/ICA_Signature_Requested__c.field-meta.xml
<CustomField>
    <fullName>ICA_Signature_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICA Signature Requested</label>
    <type>Checkbox</type>
</CustomField>