unpackaged/main/default/objects/Opportunity/fields/ICA_Signature_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>ICA_Signature_Requested_Date__c</fullName>
    <label>ICA Signature Requested Date</label>
    <type>Date</type>
</CustomField>