unpackaged/main/default/objects/Opportunity/fields/Incentive_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Approved_Date__c</fullName>
    <label>Incentive Approved Date</label>
    <type>Date</type>
</CustomField>