unpackaged/main/default/objects/Opportunity/fields/Incentive_Kickback_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Kickback_Date__c</fullName>
    <label>Incentive Kickback Date</label>
    <type>Date</type>
</CustomField>