unpackaged/main/default/objects/Opportunity/fields/Incentive_Kickback_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Kickback_Reasons__c</fullName>
    <label>Incentive Kickback Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect SSN</fullName>
            </value>
            <value>
                <fullName>Incorrect CRC</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>