unpackaged/main/default/objects/Opportunity/fields/Incentive_Name__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Name__c</fullName>
    <label>Incentive Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CT GREEN BANK</fullName>
            </value>
            <value>
                <fullName>IL ABP - Illinois Shines</fullName>
            </value>
            <value>
                <fullName>MA SMART</fullName>
            </value>
            <value>
                <fullName>NC DUKE</fullName>
            </value>
            <value>
                <fullName>NJ CLEAN ENERGY</fullName>
            </value>
            <value>
                <fullName>Rhode Island - FIT</fullName>
            </value>
            <value>
                <fullName>Rhode Island - NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>