unpackaged/main/default/objects/Opportunity/fields/Incentive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Notes__c</fullName>
    <label>Incentive Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>