unpackaged/main/default/objects/Opportunity/fields/Incentive_Payment_Amount_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Payment_Amount_Confirmed__c</fullName>
    <label>Incentive Payment Amount Confirmed</label>
    <type>TextArea</type>
</CustomField>