unpackaged/main/default/objects/Opportunity/fields/Incentive_Resubmitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Resubmitted_Date__c</fullName>
    <label>Incentive Resubmitted Date</label>
    <type>Date</type>
</CustomField>