unpackaged/main/default/objects/Opportunity/fields/Incentive_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Submitted_Date__c</fullName>
    <label>Incentive Submitted Date</label>
    <type>Date</type>
</CustomField>