unpackaged/main/default/objects/Opportunity/fields/Initial_Design_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Design_Upload_Date__c</fullName>
    <description>Date that Survey Partner uploads Initial Design (layout) for our review.</description>
    <label>Initial Design Upload Date</label>
    <type>Date</type>
</CustomField>