unpackaged/main/default/objects/Opportunity/fields/Initial_Invoice_Amount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice_Amount_Calc__c</fullName>
    <formula>IF( RecordType.Id = '0122L000000kDhg', 0, Amount * 0.3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Invoice Amount (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>