unpackaged/main/default/objects/Opportunity/fields/Inside_Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inside Sales Opportunity</label>
    <type>Checkbox</type>
</CustomField>