unpackaged/main/default/objects/Opportunity/fields/Inspection_Comp_Permit_Closed__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Comp_Permit_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>