unpackaged/main/default/objects/Opportunity/fields/Inspection_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Completed_Date__c</fullName>
    <label>Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>