unpackaged/main/default/objects/Opportunity/fields/Inspection_Failed_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Failed_Date__c</fullName>
    <label>Inspection Failed Date</label>
    <type>Date</type>
</CustomField>