unpackaged/main/default/objects/Opportunity/fields/Inspection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Notes__c</fullName>
    <label>Inspection Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>