unpackaged/main/default/objects/Opportunity/fields/Inspection_Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Rescheduled_Date__c</fullName>
    <label>Inspection Rescheduled Date</label>
    <type>Date</type>
</CustomField>