unpackaged/main/default/objects/Opportunity/fields/Inspection_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Scheduled</label>
    <type>Checkbox</type>
</CustomField>