unpackaged/main/default/objects/Opportunity/fields/Install_Completed__c.field-meta.xml
<CustomField>
    <fullName>Install_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Completed</label>
    <type>Checkbox</type>
</CustomField>