unpackaged/main/default/objects/Opportunity/fields/Install_Completion_Section_Notes__c.field-meta.xml
<CustomField>
    <fullName>Install_Completion_Section_Notes__c</fullName>
    <label>Install Completion Section Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>