unpackaged/main/default/objects/Opportunity/fields/Install_Completion_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Install_Completion_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Completion Submitted</label>
    <type>Checkbox</type>
</CustomField>