unpackaged/main/default/objects/Opportunity/fields/Install_Cost_Watt__c.field-meta.xml
<CustomField>
    <fullName>Install_Cost_Watt__c</fullName>
    <formula>CASE(  Location__c  ,  
"Massachusetts", 0.72,
"New Jersey", 0.63,
"Rhode Island", 0.72,
"Florida", 0.48  ,
"Illinois", Case(  Installation_Team__c,"Re-Think", 0.95, 0.67),
0.58)</formula>
    <label>Install $Cost / Watt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>