unpackaged/main/default/objects/Opportunity/fields/Install_Photo_QC_Pass_First_Time__c.field-meta.xml
<CustomField>
    <fullName>Install_Photo_QC_Pass_First_Time__c</fullName>
    <label>Install Photo QC Pass First Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>