unpackaged/main/default/objects/Opportunity/fields/Install_Ready__c.field-meta.xml
<CustomField>
    <fullName>Install_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Ready</label>
    <type>Checkbox</type>
</CustomField>