unpackaged/main/default/objects/Opportunity/fields/Install_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Ready_Date__c</fullName>
    <label>Install Ready Date</label>
    <type>Date</type>
</CustomField>