unpackaged/main/default/objects/Opportunity/fields/Install_watt_Value__c.field-meta.xml
<CustomField>
    <fullName>Install_watt_Value__c</fullName>
    <label>Install $/watt Value</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>