unpackaged/main/default/objects/Opportunity/fields/Installation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Installation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Complete</label>
    <type>Checkbox</type>
</CustomField>