unpackaged/main/default/objects/Opportunity/fields/Installation_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Complete_Date__c</fullName>
    <label>Installation Complete Date</label>
    <type>Date</type>
</CustomField>