unpackaged/main/default/objects/Opportunity/fields/Installation_Field_Error__c.field-meta.xml
<CustomField>
    <fullName>Installation_Field_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Field Error</label>
    <type>Checkbox</type>
</CustomField>