unpackaged/main/default/objects/Opportunity/fields/Installation_Field_Error_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Field_Error_Date__c</fullName>
    <label>Installation Field Error Date</label>
    <type>Date</type>
</CustomField>