unpackaged/main/default/objects/Opportunity/fields/Installation_Field_Error_Notes__c.field-meta.xml
<CustomField>
    <fullName>Installation_Field_Error_Notes__c</fullName>
    <label>Change Order Notes</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>