unpackaged/main/default/objects/Opportunity/fields/Installation_Field_Error_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Installation_Field_Error_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Field Error Resolved</label>
    <type>Checkbox</type>
</CustomField>