unpackaged/main/default/objects/Opportunity/fields/Installation_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Installation_Pricing__c</fullName>
    <formula>Case(   Installation_Team__c  , 

"Palmetto Team 1", 0.70 *  System_Size_Calculated_kW__c  * 1000,

"Palmetto Team 2", 0.70 *  System_Size_Calculated_kW__c  * 1000,

"Palmetto Team 3", 0.70 *  System_Size_Calculated_kW__c  * 1000,

"Guardian", 0.45 *  System_Size_Calculated_kW__c  * 1000,

"Devlin", 0.75 *  System_Size_Calculated_kW__c  * 1000,

"FirstLight NJ", 0.75 *  System_Size_Calculated_kW__c  * 1000,

"Skyline Solar", 0.75 *  System_Size_Calculated_kW__c  * 1000,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>