unpackaged/main/default/objects/Opportunity/fields/Installation_Team__c.field-meta.xml
<CustomField>
    <fullName>Installation_Team__c</fullName>
    <label>Installation Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>15 Lightyears, Inc</fullName>
            </value>
            <value>
                <fullName>3a Roofing</fullName>
            </value>
            <value>
                <fullName>AAA Solar</fullName>
            </value>
            <value>
                <fullName>Accept Solar</fullName>
            </value>
            <value>
                <fullName>AG Electric</fullName>
            </value>
            <value>
                <fullName>Allsolar Energy, Inc.</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Apex Solar</fullName>
            </value>
            <value>
                <fullName>Apollo Electric</fullName>
            </value>
            <value>
                <fullName>Appalachian Renewable Power</fullName>
            </value>
            <value>
                <fullName>AVA Electrical and Lighting</fullName>
            </value>
            <value>
                <fullName>Axis Solar</fullName>
                <label>Axis Solar LLC</label>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>BK Linn Construction</fullName>
            </value>
            <value>
                <fullName>BP Derricotte Maintenance</fullName>
            </value>
            <value>
                <fullName>Castaways Energy LLC</fullName>
            </value>
            <value>
                <fullName>Charge Up Electric</fullName>
            </value>
            <value>
                <fullName>Coldwell Electric</fullName>
            </value>
            <value>
                <fullName>CT - Apex</fullName>
            </value>
            <value>
                <fullName>Devlin - Remote</fullName>
                <label>CTFC - Remote</label>
            </value>
            <value>
                <fullName>CT Renewables</fullName>
            </value>
            <value>
                <fullName>CT - Skyline Solar</fullName>
            </value>
            <value>
                <fullName>DBT Solar</fullName>
            </value>
            <value>
                <fullName>Derricotte Maintenance</fullName>
            </value>
            <value>
                <fullName>Devlin</fullName>
                <label>Devlin - SC/NC</label>
            </value>
            <value>
                <fullName>DK Energy</fullName>
            </value>
            <value>
                <fullName>East Coast Solar Services</fullName>
            </value>
            <value>
                <fullName>Eco Smart</fullName>
            </value>
            <value>
                <fullName>Eco Solar Solutions</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>