unpackaged/main/default/objects/Opportunity/fields/Installation_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Installation_Team_Members__c</fullName>
    <label>Installation Team Members</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aaron Mabry</fullName>
            </value>
            <value>
                <fullName>Benjamin Wright</fullName>
            </value>
            <value>
                <fullName>Blake Finley</fullName>
            </value>
            <value>
                <fullName>Eugene Wright</fullName>
            </value>
            <value>
                <fullName>Gervis Smith</fullName>
            </value>
            <value>
                <fullName>John Mckenna</fullName>
            </value>
            <value>
                <fullName>Matt Reece</fullName>
            </value>
            <value>
                <fullName>Rhyon Kendrick</fullName>
            </value>
            <value>
                <fullName>Steven Zack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>