unpackaged/main/default/objects/Opportunity/fields/Insurance_Claims__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Build Partner Opportunity only</description>
    <label>Insurance Claims</label>
    <type>Checkbox</type>
</CustomField>