unpackaged/main/default/objects/Opportunity/fields/Insurance_COI__c.field-meta.xml
<CustomField>
    <fullName>Insurance_COI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance COI</label>
    <type>Checkbox</type>
</CustomField>