unpackaged/main/default/objects/Opportunity/fields/Insurance_Quote_Offered__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Quote_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Quote Offered</label>
    <type>Checkbox</type>
</CustomField>