unpackaged/main/default/objects/Opportunity/fields/Insurance_Quote_Offered_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Quote_Offered_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Quote Offered Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Build Partner Opportunitites</relationshipLabel>
    <relationshipName>BuildPartnerOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>