unpackaged/main/default/objects/Opportunity/fields/Insurance_Quote_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Quote_Offered_Date__c</fullName>
    <label>Insurance Quote Offered Date</label>
    <type>Date</type>
</CustomField>