unpackaged/main/default/objects/Opportunity/fields/Interconnection_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Agreement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interconnection Agreement Received</label>
    <type>Checkbox</type>
</CustomField>