unpackaged/main/default/objects/Opportunity/fields/Interconnection_Kickback__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Kickback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interconnection Kickback</label>
    <type>Checkbox</type>
</CustomField>