unpackaged/main/default/objects/Opportunity/fields/Interconnection_Kickback_Date__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Kickback_Date__c</fullName>
    <label>Interconnection Kickback Date</label>
    <type>Date</type>
</CustomField>