unpackaged/main/default/objects/Opportunity/fields/Interconnection_Notes_Field__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Notes_Field__c</fullName>
    <label>Interconnection Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>