unpackaged/main/default/objects/Opportunity/fields/Interconnection_Re_Submission__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Re_Submission__c</fullName>
    <label>Interconnection Re-Submission</label>
    <type>Date</type>
</CustomField>