unpackaged/main/default/objects/Opportunity/fields/Interconnection_Sent__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interconnection Sent</label>
    <type>Checkbox</type>
</CustomField>