unpackaged/main/default/objects/Opportunity/fields/Interconnection_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Sent_Date__c</fullName>
    <label>Interconnection Sent Date</label>
    <type>Date</type>
</CustomField>