unpackaged/main/default/objects/Opportunity/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <length>200</length>
    <type>Text</type>
</CustomField>