unpackaged/main/default/objects/Opportunity/fields/Internal_Dealer_Fee_Product2__c.field-meta.xml
<CustomField>
    <fullName>Internal_Dealer_Fee_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Dealer Fee Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Dealer_Fee_Product__c.Classification__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dealer_Fee_Product__c</referenceTo>
    <relationshipLabel>Opportunities (Internal Dealer Fee Product)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>