unpackaged/main/default/objects/Opportunity/fields/Internal_Dealer_Fee_Product__c.field-meta.xml
<CustomField>
    <fullName>Internal_Dealer_Fee_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Dealer Fee Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Fees</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>