unpackaged/main/default/objects/Opportunity/fields/Inverter_1__c.field-meta.xml
<CustomField>
    <fullName>Inverter_1__c</fullName>
    <label>Inverter 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SolarEdge SE3000H-US</fullName>
            </value>
            <value>
                <fullName>SolarEdge SE3800H-US</fullName>
            </value>
            <value>
                <fullName>SolarEdge SE5000H-US</fullName>
            </value>
            <value>
                <fullName>SolarEdge SE6000H-US</fullName>
            </value>
            <value>
                <fullName>SolarEdge SE7600H-US</fullName>
            </value>
            <value>
                <fullName>SolarEdge SE10000H-US</fullName>
            </value>
            <value>
                <fullName>SolarEdge SE11400A-US</fullName>
            </value>
            <value>
                <fullName>SE9KUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>